# sequence_test

./: .gitignore  CMakeLists.txt  README  README.md
app_one/include/: calculate.h
app_one/src/: calculate.c
app_two/include/: calculate.h
app_two/src/: calculate.c
program_one/: CMakeLists.txt
program_one/include/: calculate.h
program_one/src/: calculate.c
program_two/: CMakeLists.txt
program_two/include/: calculate.h
program_two/src/: calculate.c
src/: calculate.c
